--- a/config.json
+++ b/config.json
@@ -1,5 +1,7 @@
 {
-    "originator": "Apochryphal S. U. Archives",
+    "filenameRegex": ".*_([0-9-]+_[A-Z]{2}\\d+)_\\d+_([a-zA-Z]+)_(\\d+)\\.wav",
+
+    "originator": "Apochryphal St. U. Archives",
 
     "deck": {
         "list": ["Studer", "Realistic"],
@@ -49,6 +51,12 @@
         "list": ["Generic", "CC-BY-SA"],
         "Generic": "Publication and other forms of distribution (including online sharing and streaming) may be restricted. For details, contact the Apochryphal State University Archives.",
         "CC-BY-SA": "This content is copyright by the Apochryphal State University, and is licenced under Creative Commons BY-SA. See https://creativecommons.org/licenses/by-sa/4.0/ for details."
+    },
+
+    "fileuse": {
+        "pres": "Preservation Master",
+        "presInt": "Preservation Master-Intermediate",
+        "prod": "Production Master"
     }
 }
  
