minor fixes before 2.0 release

--- a/config.json
+++ b/config.json
@@ -5,6 +5,8 @@
 
     "originator": "Apocryphal St. U. Archives",
 
+    "repocode": "ApoSU",
+
     "deck": {
         "list": ["Studer", "Realistic"],
         "Studer": "Studer A810 SN:11223344",
