Added support for IARL element via config file (does not appear in GUI)

--- a/config.json
+++ b/config.json
@@ -5,6 +5,8 @@
 
     "originator": "Apocryphal St. U. Archives",
 
+    "iarl": "US, Apocryphal State University Archives and Special Colletions",
+
     "repocode": "ApoSU",
 
     "deck": {
