Fix the autosplice sanity check and update README

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,3 +3,5 @@ include CONTRIBUTING.md
 include HISTORY.md
 include LICENSE.txt
 include README.md
+include autosplice-example.txt
+include screenshot.png
