Start setup of export dialog

--- a/autoBWF/Makefile
+++ b/autoBWF/Makefile
@@ -1,4 +1,7 @@
-all: tabbed
+all: tabbed export
 
 tabbed: tabbed.ui
 	pyuic5 tabbed.ui -o tabbed.py
+
+export: export.ui
+	pyuic5 export.ui -o export.py
