Continue setup of export dialog

--- a/autoBWF/Makefile
+++ b/autoBWF/Makefile
@@ -3,5 +3,5 @@ all: tabbed export
 tabbed: tabbed.ui
 	pyuic5 tabbed.ui -o tabbed.py
 
-export: export.ui
-	pyuic5 export.ui -o export.py
+export: export_dialog.ui
+	pyuic5 export_dialog.ui -o export_dialog.py
