--- a/autoBWF/Makefile
+++ b/autoBWF/Makefile
@@ -3,5 +3,5 @@ all: tabbed export
 tabbed: tabbed.ui
 	pyuic5 tabbed.ui -o tabbed.py
 
-export: export_dialog.ui
-	pyuic5 export_dialog.ui -o export_dialog.py
+export: export_dialog_cbr.ui
+	pyuic5 export_dialog_cbr.ui -o export_dialog_cbr.py
